fix: hotfix in install.bat script